Edit profile page and profile page
